--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@cloudinary-util/types": "^1.6.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.4",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
