--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.1",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.21.0",
@@ -29,10 +31,12 @@
     "cloudinary": "^2.8.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
